--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,34 +1,67 @@
+
+.search-bar-container {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: #f2f2f2;
+    padding: 10px;
+    z-index: 1;
+  }
+
+  .search-input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+  }
+
+  .search-button {
+    padding: 10px;
+    border: none;
+    background-color: #007bff;
+    color: #fff;
+    cursor: pointer;
+  }
+
+
 body {
     font-family: Arial, sans-serif;
-}
-
-.product-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    padding: 20px;
+    margin: 20px;
 }
 
 .product {
-    background-color: #f5f5f5;
-    padding: 20px;
-    width: 300px;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.product img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-    border-radius: 10px;
-}
-
-.product h2 {
-    font-size: 24px;
+    border: 1px solid #ccc;
+    padding: 10px;
     margin-bottom: 10px;
 }
 
-.product p {
-    margin: 0;
+.product:hover{
+    background-color: rgb(255, 204, 0);
+    cursor: pointer;
 }
+
+img {
+    width:200px;
+    height: 200px;
+}
+
+p{
+    font-size: medium;
+}
+
+.grid-container {
+    margin-top: 5%;
+    display: inline-grid;
+    grid-template-columns: auto auto auto;
+    background-color: rgb(49, 222, 75);
+    padding: 5px;
+    gap:10px;
+  }
+  
+  .grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 10px;
+    font-size: 30px;
+    text-align:center;
+  }
