--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,28 +1,38 @@
-
-.search-bar-container {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: #f2f2f2;
-    padding: 10px;
-    z-index: 1;
+topnav {
+    overflow: hidden;
+    background-color: #e9e9e9;
   }
-
-  .search-input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    font-size: 16px;
+  
+  .topnav a {
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
   }
-
-  .search-button {
-    padding: 10px;
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #2196F3;
+    color: white;
+  }
+  
+  .topnav input[type=text] {
+    float:inherit;
+    padding: 6px;
+    margin-top: 8px;
+    margin-right: 16px;
     border: none;
-    background-color: #007bff;
-    color: #fff;
-    cursor: pointer;
+    font-size: 17px;
   }
 
+/* Main CSS BELOW */
 
 body {
     font-family: Arial, sans-serif;
@@ -53,13 +63,13 @@ p{
     margin-top: 5%;
     display: inline-grid;
     grid-template-columns: auto auto auto;
-    background-color: rgb(49, 222, 75);
+    background-color: rgb(49, 222, 175);
     padding: 5px;
     gap:10px;
   }
   
   .grid-item {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgb(235, 235, 157);
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 10px;
     font-size: 30px;
