--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,7 +60,7 @@ p{
 }
 
 .grid-container {
-    margin-top: 5%;
+    margin-top: 1%;
     display: inline-grid;
     grid-template-columns: auto auto auto;
     background-color: rgb(49, 222, 175);
@@ -71,7 +71,11 @@ p{
   .grid-item {
     background-color: rgb(235, 235, 157);
     border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 10px;
+    padding: 5px;
     font-size: 30px;
     text-align:center;
+  }
+
+  .test{
+    background-color: green;
   }
