--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
-topnav {
+.topnav {
     overflow: hidden;
-    background-color: #e9e9e9;
+    width:auto;
   }
   
   .topnav a {
@@ -55,12 +55,17 @@ img {
     height: 200px;
 }
 
+.images{
+  width: 200px;
+  height: 200px;
+}
+
 p{
     font-size: medium;
 }
 
 .grid-container {
-    margin-top: 1%;
+    margin-top: 5%;
     display: inline-grid;
     grid-template-columns: auto auto auto;
     background-color: rgb(49, 222, 175);
@@ -78,4 +83,8 @@ p{
 
   .test{
     background-color: green;
+  }
+
+  .product-id{
+    display: none;
   }
