--- a/assets/css/search_bar.css
+++ b/assets/css/search_bar.css
@@ -5,7 +5,7 @@
 .search-input {
   width: 95%;
   padding: 12px;
-  border: 1px solid #ddd;
+  border: 1px solid #555555;
   border-radius: 5px;
   font-size: 16px;
 }
