--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -95,3 +95,31 @@ select {
     text-align: center;
     font-size: xx-large;
   }
+
+  /* CSS for Pagination */
+
+  .pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  .pagination a {
+    padding: 8px 12px;
+    margin: 0 5px;
+    text-decoration: none;
+    color: #333;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .pagination a.active {
+    background-color: #4caf50;
+    color: white;
+    border: 1px solid #4caf50;
+  }
+  
+  .pagination a:hover {
+    background-color: #ddd;
+  }
