--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,11 @@
+/* Body */
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 20px;
+  background-color: #f7f7f7da;
+}
+
 /* Title */
 
 h1 {
@@ -21,42 +29,38 @@ h1 {
   font-size: 16px;
 }
 
-/* Body */
+/* Select Box */
 
-body {
-  font-family: Arial, sans-serif;
+select {
   margin: 20px;
-  background-color: #f7f7f7da;
+  height: 3em;
+  border-radius: 0.25rem;
+  background-color: #f6efef;
 }
 
-.product {
-  border: 1px solid #ccc;
-  padding: 100px;
-  margin-bottom: 10px;
+option {
+  background-color: rgb(145, 235, 231);
 }
 
-.product:hover {
-  background-color: rgb(255, 179, 64);
-  cursor: pointer;
+select {
+  padding: 8px;
+  font-size: 14px;
 }
 
-img {
-  width: 150px;
-  height: 150px;
+label {
+  font-weight: bold;
+  font-size: large;
 }
 
-.images {
-  width: 200px;
-  height: 200px;
-}
-
-p {
-  font-size: medium;
-}
+/* Grid for Product List */
 
 .grid-container {
   display: grid;
+
+  /* creating responsive grid with columns at least 300px wide, 
+  dynamically adjusting to fill available space.*/
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+
   grid-gap: 20px;
   padding: 20px;
 }
@@ -72,57 +76,34 @@ p {
 
 .grid-item:hover {
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  background-color: rgb(255, 179, 64);
+  cursor: pointer;
 }
 
-.grid-item h3 {
+.grid-item h4 {
   margin: 0 0 10px;
   font-size: 1.5rem;
 }
 
-.product-item p {
-  margin: 10px 0;
-  font-size: 1rem;
-}
-
 .grid-item img {
-  max-width: 100%;
-  max-height: 200px;
+  width: 150px;
+  height: 150px;
   object-fit: cover;
   border-radius: 10%;
 }
 
-
-select {
-  margin: 20px;
-  height: 3em;
-  border-radius: 0.25rem;
-  background-color: #f6efef;
-}
-
-select::after {
-  background-color: aqua;
-}
-
-option {
-  background-color: rgb(224, 234, 204);
-}
-
-select {
-  padding: 8px;
-  font-size: 14px;
-}
-
-label {
-  font-weight: bold;
-  font-size: large;
-}
+/* No Product Message */
 
 .no-product {
   text-align: center;
   font-size: xx-large;
 }
 
-/* CSS for Pagination */
+.hide {
+  display: none;
+}
+
+/* Pagination */
 
 .pagination {
   display: flex;
@@ -136,22 +117,17 @@ label {
   text-decoration: none;
   color: #333;
   border: 1px solid #ddd;
-  border-radius: 4px;
+  border-radius: 5px;
   cursor: pointer;
 }
 
 .pagination a.active {
-  background-color: #4caf50;
+  background-color: rgb(48, 219, 91);
   color: white;
-  border: 1px solid #4caf50;
+  border: 1px solid rgb(36, 138, 61);
 }
 
 .pagination a:hover {
   background-color: #ddd;
 }
 
-/* Youtube */
-
-.hide {
-  display: none;
-}
